Tried to set a minimum size

--- a/WPF/FilePicker.xaml
+++ b/WPF/FilePicker.xaml
@@ -6,6 +6,8 @@
              xmlns:local="clr-namespace:Utils.WPF" x:Class="Utils.WPF.FilePicker" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
+             MinHeight="{Binding ElementName=BrowseButton, Mode=OneWay}"
+             MinWidth="{Binding ElementName=BrowseButton, Mode=OneWay}"
              AllowDrop="True"
              DragOver="FilePicker_OnDragOver"
              Drop="FilePicker_OnDrop">
@@ -23,6 +25,6 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <TextBox  VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="0" Text="{Binding FilePath, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:FilePicker}}}" IsEnabled="False" BorderThickness="1,1,0,1"/>
-        <Button Grid.Column="1" Content="{Binding ButtonContent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:FilePicker}}}" Style="{StaticResource ButtonStyle}" Click="BrowseKeyButton_Click"/><!--TODO: Localize default value-->
+        <Button x:Name="BrowseButton" Grid.Column="1" Content="{Binding ButtonContent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:FilePicker}}}" Style="{StaticResource ButtonStyle}" Click="BrowseKeyButton_Click"/><!--TODO: Localize default value-->
     </Grid>
 </UserControl>
