--- a/WPF/FilePicker.xaml
+++ b/WPF/FilePicker.xaml
@@ -23,6 +23,6 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <TextBox  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="0" Text="{Binding FilePath, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:FilePicker}}}" IsEnabled="False" BorderThickness="1,1,0,1"/>
-        <Button x:Name="BrowseButton" Grid.Column="1" Content="{Binding ButtonContent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:FilePicker}}}" Style="{StaticResource ButtonStyle}" Click="BrowseKeyButtonClick" VerticalAlignment="Stretch"/><!--TODO: Localize default value-->
+        <Button x:Name="BrowseButton" Grid.Column="1" Content="{Binding ButtonContent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:FilePicker}}}" Style="{StaticResource ButtonStyle}" Click="BrowseKeyButtonClick" VerticalAlignment="Stretch" Padding="5,2"/><!--TODO: Localize default value-->
     </Grid>
 </UserControl>
