--- a/WPF/FilePicker.xaml
+++ b/WPF/FilePicker.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Utils.WPF" x:Class="Utils.WPF.FilePicker" 
+             xmlns:local="clr-namespace:Utils.WPF" 
+             x:Class="Utils.FilePicker" 
              mc:Ignorable="d" 
              d:DesignHeight="20" d:DesignWidth="300"
              AllowDrop="True"
